[WIP] Added a the skeleton for the search /w throttling support

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_PROTOCOL=https
-REACT_APP_SERVER_HOST=testsh.free.beeceptor.com
+REACT_APP_SERVER_PROTOCOL=http
+REACT_APP_SERVER_HOST=dataservice.accuweather.com
