--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test2",
+  "name": "herolohometask",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "framer-motion": "^2.9.4",
     "google-maps-react": "^2.0.6",
     "react": "^17.0.1",
@@ -21,11 +24,11 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sass": "^1.29.0",
-    "underscore": "^1.11.0",
-    "web-vitals": "^0.2.4"
+    "underscore": "^1.11.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "node build/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
